Add backend game functionality

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
       Rock Paper Scissors
     </h1>
     <p class="score">
-      <span id="playerScore">0</span>
+      <span id="scorePlayer">0</span>
       : 
-      <span id="computerScore">0</span>
+      <span id="scoreComputer">0</span>
     </p>
     <p class="status" id="roundStatus">
       Press any button to start!
     </p>
     <div class="buttons">
-      <button id="btnRock">Rock</button>
-      <button id="btnPaper">Paper</button>
-      <button id="btnScissors">Scissors</button>
+      <button data-choice="rock">Rock</button>
+      <button data-choice="paper">Paper</button>
+      <button data-choice="scissors">Scissors</button>
     </div>
   </div>
 
