Add restart function after endgame

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
       Press any button to start!
     </p>
     <div class="buttons">
-      <button data-choice="rock">Rock</button>
-      <button data-choice="paper">Paper</button>
-      <button data-choice="scissors">Scissors</button>
+      <button class="btn-choice" data-choice="rock">Rock</button>
+      <button class="btn-choice" data-choice="paper">Paper</button>
+      <button class="btn-choice" data-choice="scissors">Scissors</button>
     </div>
+    <button id="btnRestart" hidden>Restart?</button>
   </div>
 
 </body>
